# automaticaddison_mycobot_ros2_fork_cpp_controls

./: README.md
install/: local_setup.sh  setup.sh
install/mycobot_bringup/share/mycobot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/mycobot_bringup/share/mycobot_bringup/cmake/: mycobot_bringupConfig-version.cmake  mycobot_bringupConfig.cmake
install/mycobot_description/share/mycobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mycobot_gazebo/share/mycobot_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mycobot_moveit_config/share/mycobot_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mycobot_ros2/share/mycobot_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/mycobot_system_tests/lib/mycobot_system_tests/: 260309_in_out_demo  arm_gripper_loop_controller  arm_gripper_loop_controller.py
install/mycobot_system_tests/share/mycobot_system_tests/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/mycobot_ros2/install/: local_setup.sh  setup.sh
src/mycobot_ros2/log/: latest_build
src/mycobot_ros2/mycobot_bringup/: CMakeLists.txt
src/mycobot_ros2/mycobot_moveit_config/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_moveit_config/launch/: load_ros2_controllers.launch.py
src/mycobot_ros2/mycobot_system_tests/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_system_tests/src/: 260309_in_out_demo.cpp  control_class.cpp  secant.cpp
(+513 files in other folders)
